fix clicking invisible clear overlay btn (bug 1220768)

--- a/src/media/css/nav--global.styl
+++ b/src/media/css/nav--global.styl
@@ -250,7 +250,8 @@ desktop-link-active() {
 
 @media $base-desktop {
     .global-nav-menu,
-    .more-menu-overlay {
+    .more-menu-overlay,
+    .overlay-close {
         display: none;
     }
     .global-nav-menu-desktop {
